<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_myevent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            card_view:cardElevation="5dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="5">

                        <TextView
                            android:id="@+id/tv_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.75"
                            android:text="@string/itemname"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/tv_size"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.1"
                            android:text="@string/size"
                            android:textAlignment="center"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textSize="13sp"

                            />

                        <TextView
                            android:id="@+id/tv_rate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/rate"
                            android:textAlignment="center"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/tv_total"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/total"
                            android:textAlignment="center"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textSize="13sp" />

                        <CheckBox
                            android:id="@+id/chk_selectitem"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.15"
                            android:clickable="false" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="325dp"
        android:layout_height="173dp"
        card_view:cardElevation="5dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/linearLayout"
        card_view:layout_constraintVertical_bias="0.327">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/item_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/round_background"
                android:contentDescription="@string/item_name"
                android:padding="3dp"
                android:src="@drawable/twotone_shopping_cart_white_24dp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.894"
                card_view:layout_constraintStart_toEndOf="@+id/textView"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/price"
                android:textSize="15sp"
                card_view:layout_constraintStart_toStartOf="@+id/textView"
                card_view:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/vendor_name"
                android:textSize="18sp"
                card_view:layout_constraintStart_toStartOf="@+id/textView2"
                card_view:layout_constraintTop_toBottomOf="@+id/textView2" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:foregroundGravity="center"
                android:background="@drawable/item_quantity"
                card_view:layout_constraintEnd_toEndOf="@+id/imageView"
                card_view:layout_constraintHorizontal_bias="1.0"
                card_view:layout_constraintStart_toStartOf="@+id/imageView"
                card_view:layout_constraintTop_toBottomOf="@+id/imageView">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/_2"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintVertical_bias="0.687" />

                <ImageView
                    android:id="@+id/imageButton"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:contentDescription="@string/keyboard"
                    android:src="@drawable/outline_add_circle_outline_24"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintHorizontal_bias="0.583"
                    card_view:layout_constraintStart_toEndOf="@+id/textView3"
                    card_view:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:contentDescription="@string/keyboard"
                    android:focusable="true"
                    android:clickable="true"
                    android:src="@drawable/baseline_remove_circle_outline_24"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toStartOf="@+id/textView3"
                    card_view:layout_constraintHorizontal_bias="0.388"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>